--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@windicss/plugin-animations": "^1.0.9",
     "svelte": "^3.44.0",
